--- a/src/blog/content/themes/carloscuesta/author.hbs
+++ b/src/blog/content/themes/carloscuesta/author.hbs
@@ -19,7 +19,7 @@
     	    {{/if}}
     	    <div class="author-meta">
     	        {{#if location}}<span class="author-location"><svg class="icon icon-bio icon-location"><use xlink:href="#icon-location"></use></svg> {{location}}</span>{{/if}}
-    	        {{#if website}}<span class="author-link"><svg class="icon icon-bio icon-link"><use xlink:href="#icon-link"></use></svg> <a itemprop="url" href="{{website}}" onclick="ga('send', 'event', 'Blog', 'Author Website');">{{website}}</a></span>{{/if}}
+    	        {{#if website}}<span class="author-link"><svg class="icon icon-bio icon-link"><use xlink:href="#icon-link"></use></svg> <a itemprop="url" href="{{website}}" onmousedown="ga('send', 'event', 'Blog', 'Author Website');">{{website}}</a></span>{{/if}}
     	        <span class="author-stats"><svg class="icon icon-bio icon-note"><use xlink:href="#icon-note"></use></svg> {{plural ../pagination.total empty='No posts' singular='% post' plural='% posts'}}</span>
     	    </div>
     	</section>
