--- a/src/app/styles/style.scss
+++ b/src/app/styles/style.scss
@@ -23,8 +23,6 @@
 }
 
 .social {
-	margin-top: 1em;
-
 	.icon:hover {
 		fill: $white;
 		transition: fill .2s ease-in-out;
@@ -133,22 +131,52 @@ nav.nav {
 }
 
 .aboutme {
-	.bio {
-		padding: 1em 0.5em;
+	background-color: #fff;
+
+	.name {
+		font-weight: 700;
+		font-size: 2.75em;
 	}
+
 	.avatar {
-		border-radius: 50%;
-		width: 224px;
+		width: 300px;
+		border-radius: 2px;
 	}
 
 	h1 {
 		padding: 0;
+	}
+
+	.social {
+		margin-top:1.5em;
+	}
+
+	.icon {
+		margin-right: 1em;
 	}
 }
 
 .github {
 	background-color: $whitesection;
 	color: $text;
+
+	.repo {
+		padding: 60px 40px;
+		border-bottom: 3px solid;
+		border-bottom-color: rgba(0, 0, 0, 0.2);
+		transition: all .3s ease-out;
+
+		&:hover {
+			box-shadow: 0 21px 65px 0 rgba(0, 0, 0, 0.18);
+			-moz-box-shadow: 0 21px 65px 0 rgba(0, 0, 0, 0.18);
+			-webkit-box-shadow: 0 21px 65px 0 rgba(0, 0, 0, 0.18);
+			-o-box-shadow: 0 21px 65px 0 rgba(0, 0, 0, 0.18);
+		}
+	}
+
+	.language-javascript {
+		border-bottom-color: $javascript;
+	}
 
 	.language, .icon-fork {
 		margin-left: .35em;
@@ -283,15 +311,32 @@ nav.nav {
 }
 
 footer {
-	background-color: $accent;
-	color: $white;
-	padding: 2em 1.5em;
+	color: $text;
+	background-color: #fff;
+	padding: 3em 1.5em;
+	text-align: center;
+
+	h3 {
+		font-weight: 400;
+		color: #37474F;
+	}
 
 	.icon {
-		fill: rgba(255, 255, 255, .8);
+		fill: #37474F;
 		width: 1.25em;
 		height: 1.25em;
 		padding:0 .5em;
+	}
+
+	.navigation {
+		padding:0;
+		margin:0;
+		li {
+			display: inline-block;
+			padding-right: .95em;
+			font-size: .75em;
+			text-transform: uppercase;
+		}
 	}
 }
 
