--- a/src/app/templates/_includes/_sections/_twitter.jade
+++ b/src/app/templates/_includes/_sections/_twitter.jade
@@ -13,9 +13,11 @@ section.twitter
                 article.tweet.col-xs-12.col-sm-6
                     h5 !{tweet.text}
                     div
-                        svg.icon.icon-retweet
-                            use(xlink:href="#icon-retweet")
-                        span #{tweet.retweet_count}
-                        svg.icon.icon-heart
-                            use(xlink:href="#icon-heart")
-                        span #{tweet.favorite_count}
+                        a(href="https://twitter.com/intent/retweet?tweet_id=#{tweet.id_str}")
+                            svg.icon.icon-retweet
+                                use(xlink:href="#icon-retweet")
+                            span #{tweet.retweet_count}
+                        a(href="https://twitter.com/intent/favorite?tweet_id=#{tweet.id_str}")
+                            svg.icon.icon-heart
+                                use(xlink:href="#icon-heart")
+                            span #{tweet.favorite_count}
