Update styles and templates
Making aboutme and github section

--- a/src/app/styles/_partials/_mixins.scss
+++ b/src/app/styles/_partials/_mixins.scss
@@ -8,6 +8,12 @@
 	}
 }
 
+@mixin createLanguageCard($language, $color) {
+	.language-#{$language} {
+		border-bottom-color: $color;
+	}
+}
+
 @mixin small {
     @media (max-width: 768px) {
         @content;
