--- a/src/app/templates/_includes/_sections/_github.jade
+++ b/src/app/templates/_includes/_sections/_github.jade
@@ -14,4 +14,7 @@ section.github
                                 use(xlink:href="#icon-fork")
                             span #{github.forks}
                         .description= github.description
-            a.btn.btn-large.follow(href="#") Follow @carloscuesta
+            a.btn.btn-large.btn-blue(href="#")
+                svg.icon.icon-github
+                        use(xlink:href="#icon-github")
+                | Follow @carloscuesta
