--- a/src/app/templates/_includes/_sections/_aboutme.jade
+++ b/src/app/templates/_includes/_sections/_aboutme.jade
@@ -6,7 +6,7 @@ section.aboutme(itemprop="author" itemscope itemtype="http://schema.org/Person")
                 h3.job #{me.job}
                 p.bio(itemprop="description") !{me.aboutme}
                 .getintouch
-                    a.btn(href="mailto:crloscuesta@gmail.com?subject=Hello") Contact Me
+                    a.btn.btn-red(href="mailto:crloscuesta@gmail.com?subject=Hello") Contact Me
                     .social
                         a(href="https://twitter.com/#{social.twitter}", target="_blank")
                             svg.icon.icon-linkedin
