Update twitterapiclient, templates and styles
Grab the media image from the tweet, updated styles and templates.

--- a/src/app/styles/_partials/_mixins.scss
+++ b/src/app/styles/_partials/_mixins.scss
@@ -10,7 +10,7 @@
 
 @mixin createLanguageCard($language, $color) {
 	.language-#{$language} {
-		border-bottom-color: $color;
+		border-top-color: $color;
 	}
 }
 
