--- a/src/app/styles/_partials/_vars.scss
+++ b/src/app/styles/_partials/_vars.scss
@@ -1,11 +1,12 @@
 $white: #fff;
-$accent: #2196F3; //FF5252
+$accent: #FF5252; //FF5252
 $accentlight: #64B5F6;
 $accentgray: #B0BEC5;
 $yellow: #FFD600;
 $pink: #EC407A;
 $green: #4CAF50;
-$text: #616161; // 263238
+$text: #37474F;
+$menu: #37474F;
 $whitesection: #f8f8f8;
 $blacksection: #232323;
 
