--- a/src/app/templates/_includes/_sections/_aboutme.jade
+++ b/src/app/templates/_includes/_sections/_aboutme.jade
@@ -3,7 +3,7 @@ section.aboutme(itemprop="author" itemscope itemtype="http://schema.org/Person")
         .row.middle-xs
             .col-xs-12.col-md-6.bio
                 h1.name(itemprop="name") #{me.name}
-                h3.job #{me.job}
+                h3 #{me.job}
                 p.bio(itemprop="description") !{me.aboutme}
                 .getintouch
                     a.btn.btn-red(href="mailto:crloscuesta@gmail.com?subject=Hello") Contact Me
