--- a/src/app/styles/_partials/_defaults.scss
+++ b/src/app/styles/_partials/_defaults.scss
@@ -28,12 +28,12 @@ p a:hover {
 h1, h2, h3,  h4, h5, h6 {
     line-height: 1.5;
     margin-top: 0;
-    margin-bottom: .5rem
+    margin-bottom: .5rem;
 }
 
 h1 {
     font-size: 4em;
-    font-weight: 400;
+    font-weight: 700;
 }
 
 h2 {
