--- a/src/app/styles/_partials/_menu.scss
+++ b/src/app/styles/_partials/_menu.scss
@@ -23,7 +23,7 @@
     	left: 18px;
     	right: 18px;
     	height: 6px;
-    	background: #fff;
+    	background: $menu;
 
     	&::before, &::after {
     		position: absolute;
@@ -31,7 +31,7 @@
     		left: 0;
     		width: 100%;
     		height: 6px;
-    		background-color: #fff;
+    		background-color: $menu;
     		content: "";
     	}
 
@@ -106,7 +106,7 @@
 }
 
 .modal__content {
-    background-color: #FFF;
+    background-color: $menu;
     height: 300px;
     width: 200px;
     margin: 20px auto;
