--- a/src/app/templates/_includes/_header.jade
+++ b/src/app/templates/_includes/_header.jade
@@ -1,14 +1,16 @@
 include _nav.jade
-header.site-header.center-xs(itemprop="author", itemscope, itemtype="http://schema.org/Person")
-    h1(itemprop="name") #{me.name}
-    h3(itemprop="description") #{me.job}
-    .social
-        a(itemprop="sameAs", onmousedown="ga('send', 'event', 'Social Icons', 'GitHub');", href="https://twitter.com/#{social.twitter}", target="_blank")
-            svg.icon.icon-twitter
-                use(xlink:href="#icon-twitter")
-        a(itemprop="sameAs", onmousedown="ga('send', 'event', 'Social Icons', 'Twitter');", href="https://github.com/#{social.github}", target="_blank")
-            svg.icon.icon-github
-                use(xlink:href="#icon-github")
-        a(itemprop="sameAs", onmousedown="ga('send', 'event', 'Social Icons', 'LinkedIn');", href="https://es.linkedin.com/in/#{social.linkedin}", target="_blank")
-            svg.icon.icon-linkedin
-                use(xlink:href="#icon-linkedin")
+header.site-header(itemprop="author", itemscope, itemtype="http://schema.org/Person")
+    .wrap
+        h1(itemprop="name") Hi! I'm
+            span.my-name  #{me.name}
+        h2.job(itemprop="description") #{me.job}
+        .social
+            a(itemprop="sameAs", onmousedown="ga('send', 'event', 'Social Icons', 'GitHub');", href="https://twitter.com/#{social.twitter}", target="_blank")
+                svg.icon.icon-twitter
+                    use(xlink:href="#icon-twitter")
+            a(itemprop="sameAs", onmousedown="ga('send', 'event', 'Social Icons', 'Twitter');", href="https://github.com/#{social.github}", target="_blank")
+                svg.icon.icon-github
+                    use(xlink:href="#icon-github")
+            a(itemprop="sameAs", onmousedown="ga('send', 'event', 'Social Icons', 'LinkedIn');", href="https://es.linkedin.com/in/#{social.linkedin}", target="_blank")
+                svg.icon.icon-linkedin
+                    use(xlink:href="#icon-linkedin")
