Update styles and templats
Made a SASS refactoring to remove extra selectors, updated templates.

--- a/src/app/styles/_partials/_mixins.scss
+++ b/src/app/styles/_partials/_mixins.scss
@@ -1,10 +1,15 @@
 @mixin createTag($language, $color) {
 	.#{$language} {
-		background-color: $color;
+		color: $color;
+
+		&:before {
+			content: '#';
+		}
+
 	}
 
 	.#{$language}:hover {
-		background-color: darken($color, 10%);
+		border-bottom: 2px solid $color;
 	}
 }
 
