--- a/src/app/styles/_partials/_vars.scss
+++ b/src/app/styles/_partials/_vars.scss
@@ -9,6 +9,7 @@ $text: #37474F;
 $menu: #37474F;
 $whitesection: #f8f8f8;
 $blacksection: #232323;
+$textHover: #546E7A;
 
 $javascript: #fbdd51;
 $nodejs: #8BC34A;
